--- a/requirements.txt
+++ b/requirements.txt
@@ -10,15 +10,16 @@ packaging==25.0
 pluggy==1.6.0
 pptree==3.1
 pycparser==2.22
-pydantic==1.10.22
+pydantic==2.5.0
 pytest==7.3.1
 python-dotenv==1.1.0
 python-ulid==1.1.0
-redis==4.5.1
-redis-om==0.1.2
+redis==5.0.1
+redis-om==0.2.1
 types-cffi==1.17.0.20250523
 types-pyOpenSSL==24.1.0.20240722
 types-redis==4.6.0.20241004
 types-setuptools==80.9.0.20250529
 typing_extensions==4.13.2
-uvicorn==0.34.2
+uvicorn[standard]==0.24.0
+python-multipart==0.0.6
